Fix homepage bottom nav color on mobile

--- a/static/css/hl.css
+++ b/static/css/hl.css
@@ -566,6 +566,7 @@ h2 {
   }
   .mobile > .navbar {
     display: block;
+    background: #161d29;
   }
   .wrap {
     padding-bottom: 0;
